Add parallax effect on main page for landscape views

--- a/index.html
+++ b/index.html
@@ -80,18 +80,20 @@
         </div>
       </section>
       <!-- SVG START -->
-      <img src="img/left-top.svg" alt="" class="svg-lt" />
-      <img src="img/left-bottom.svg" alt="" class="svg-lb" />
-      <img src="img/left-mid.svg" alt="" class="svg-lm" />
-      <!--right svg-->
-      <img src="img/right-mid.svg" alt="" class="svg-rm" />
-      <img src="img/right-top.svg" alt="" class="svg-rt" />
-      <img src="img/right-bottom.svg" alt="" class="svg-rb" />
-      <!--speck svg -->
-      <img src="img/e6.svg" alt="" class="svg-e6" />
-      <img src="img/e7.svg" alt="" class="svg-e7" />
-      <img src="img/e9.svg" alt="" class="svg-e9" />
-      <img src="img/e10.svg" alt="" class="svg-e10" />
+      <div class="parallaxfx">
+        <img src="img/left-top.svg" alt="" class="svg-lt" />
+        <img src="img/left-bottom.svg" alt="" class="svg-lb" />
+        <img src="img/left-mid.svg" alt="" class="svg-lm" />
+        <!--right svg-->
+        <img src="img/right-mid.svg" alt="" class="svg-rm" />
+        <img src="img/right-top.svg" alt="" class="svg-rt" />
+        <img src="img/right-bottom.svg" alt="" class="svg-rb" />
+        <!--speck svg -->
+        <img src="img/e6.svg" alt="" class="svg-e6" />
+        <img src="img/e7.svg" alt="" class="svg-e7" />
+        <img src="img/e9.svg" alt="" class="svg-e9" />
+        <img src="img/e10.svg" alt="" class="svg-e10" />
+      </div>
       <!-- SVG ENDS -->
       <!-- WORK -->
       <section class="work">
@@ -266,6 +268,7 @@
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
+    <script src="js/main.js"></script>
     <script>
       window.jQuery ||
         document.write(
@@ -273,6 +276,5 @@
         );
     </script>
     <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
   </body>
 </html>
