Adjust svg positions for mobile and tablet displays

--- a/index.html
+++ b/index.html
@@ -81,10 +81,11 @@
       </section>
       <!-- SVG START -->
       <div class="parallaxfx">
+        <!-- left svg -->
         <img src="img/left-top.svg" alt="" class="svg-lt" />
         <img src="img/left-bottom.svg" alt="" class="svg-lb" />
         <img src="img/left-mid.svg" alt="" class="svg-lm" />
-        <!--right svg-->
+        <!--right svg -->
         <img src="img/right-mid.svg" alt="" class="svg-rm" />
         <img src="img/right-top.svg" alt="" class="svg-rt" />
         <img src="img/right-bottom.svg" alt="" class="svg-rb" />
