--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
     <!-- Icon library to show a hamburger menu on small screens -->
     <link
@@ -103,8 +104,17 @@
           <div class="content-wrapper">
             <a href="work/jubilee-austen.html">
               <article>
-                <img src="img/template.png" alt="desc" />
-                <div class="work-text">
+                <img
+                  src="img/template.png"
+                  alt="desc"
+                  data-aos="slide-up"
+                  data-aos-duration="1500"
+                />
+                <div
+                  class="work-text"
+                  data-aos="fade-left"
+                  data-aos-duration="1500"
+                >
                   <h3>Project title</h3>
                   <span>HTML</span>
                   <span>CSS</span>
@@ -118,9 +128,18 @@
               </article>
             </a>
             <a href="work/jubilee-austen.html">
-              <article id="article-b">
-                <img src="img/template.png" alt="desc" />
-                <div class="work-text">
+              <article id="article-b" data-aos-delay="300">
+                <img
+                  src="img/template.png"
+                  alt="desc"
+                  data-aos="slide-up"
+                  data-aos-duration="1500"
+                />
+                <div
+                  class="work-text"
+                  data-aos="fade-right"
+                  data-aos-duration="1500"
+                >
                   <h3>Project title</h3>
                   <span>HTML</span>
                   <span>CSS</span>
@@ -134,9 +153,18 @@
               </article>
             </a>
             <a href="work/jubilee-austen.html">
-              <article>
-                <img src="img/template.png" alt="desc" />
-                <div class="work-text">
+              <article data-aos-delay="500">
+                <img
+                  src="img/template.png"
+                  alt="desc"
+                  data-aos="slide-up"
+                  data-aos-duration="1500"
+                />
+                <div
+                  class="work-text"
+                  data-aos="fade-left"
+                  data-aos-duration="1500"
+                >
                   <h3>Project title</h3>
                   <span>HTML</span>
                   <span>CSS</span>
@@ -161,7 +189,7 @@
         <div class="wrapper-container">
           <h1>What I do</h1>
           <div class="content-wrapper">
-            <article>
+            <article data-aos="fade-up" data-aos-duration="1000">
               <i class="fas fa-paint-brush"></i>
               <div class="skills-text">
                 <h4>Skill title</h4>
@@ -172,7 +200,12 @@
               </div>
             </article>
 
-            <article>
+            <article
+              data-aos="slide-up"
+              data-aos-anchor-placement="center-bottom"
+              data-aos-duration="1500"
+              data-aos-delay="200"
+            >
               <i class="fas fa-code"></i>
               <div class="skills-text">
                 <h4>Skill title</h4>
@@ -183,7 +216,12 @@
               </div>
             </article>
 
-            <article>
+            <article
+              data-aos="slide-up"
+              data-aos-anchor-placement="center-bottom"
+              data-aos-duration="1500"
+              data-aos-delay="400"
+            >
               <i class="fas fa-search"></i>
               <div class="skills-text">
                 <h4>Skill title</h4>
@@ -198,7 +236,12 @@
       </section>
 
       <!-- CALL TO ACTION-->
-      <section class="call-to-action">
+      <section
+        class="call-to-action"
+        data-aos="slide-up"
+        data-aos-duration="1500"
+        data-aos-delay="300"
+      >
         <div class="rounded-square-container">
           <div class="content-wrapper">
             <h1>Call to action</h1>
@@ -260,7 +303,13 @@
         <p>Made with love by <a href="./">Hanis</a> 2020</p>
       </div>
     </footer>
-    <img src="img/waves-footer.svg" alt="" class="svg-waves" />
+    <img
+      src="img/waves-footer.svg"
+      alt=""
+      class="svg-waves"
+      data-aos="slide-up"
+      data-aos-duration="1500"
+    />
 
     <!-- SCRIPTS -->
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
@@ -269,12 +318,16 @@
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
-    <script src="js/main.js"></script>
     <script>
       window.jQuery ||
         document.write(
           '<script src="js/vendor/jquery-3.4.1.min.js"><\/script>'
         );
+    </script>
+    <script src="js/main.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
     </script>
     <script src="js/plugins.js"></script>
   </body>
