--- a/contact/index.html
+++ b/contact/index.html
@@ -15,6 +15,7 @@
 
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/main.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
     <!-- Icon library to show a hamburger menu (bars) on small screens -->
     <link
@@ -70,7 +71,7 @@
 
     <!-- MAIN - CONTACT -->
     <main>
-      <section class="contact">
+      <section class="contact" data-aos="zoom-in" data-aos-duration="1200">
         <div class="rounded-square-container">
           <div class="content-wrapper">
             <h1>Say hello</h1>
@@ -87,17 +88,17 @@
               <h3>See what I'm up to</h3>
               <div class="social">
                 <div class="social-icons">
-                  <p>
+                  <p data-aos="fade-right" data-aos-duration="1000">
                     <a href="https://www.facebook.com/" target="_blank">
                       <i class="fab fa-facebook-f"></i>
                     </a>
                   </p>
-                  <p>
+                  <p data-aos="fade-in" data-aos-duration="1000">
                     <a href="https://www.twitter.com/" target="_blank">
                       <i class="fab fa-twitter"></i>
                     </a>
                   </p>
-                  <p>
+                  <p data-aos="fade-left" data-aos-duration="1000">
                     <a href="https://www.instagram.com/" target="_blank">
                       <i class="fab fa-instagram"></i>
                     </a>
@@ -125,7 +126,11 @@
           '<script src="../js/vendor/jquery-3.4.1.min.js"><\/script>'
         );
     </script>
-    <script src="../js/plugins.js"></script>
     <script src="../js/main.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <script src="../js/plugins.js"></script>
   </body>
 </html>
