--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
       <!-- HERO -->
       <section class="hero">
         <div class="content-wrapper">
-          <h1>Hanis</h1>
-          <h2>Creating beautiful websites</h2>
+          <h1 data-aos="zoom-in" data-aos-duration="1500">Hanis</h1>
+          <h2 data-aos="zoom-in" data-aos-duration="1500">
+            Creating beautiful websites
+          </h2>
           <div class="button-container">
             <a href="#work" class="button">View work</a>
           </div>
@@ -83,18 +85,88 @@
       <!-- SVG START -->
       <div class="parallaxfx">
         <!-- left svg -->
-        <img src="img/left-top.svg" alt="" class="svg-lt" />
-        <img src="img/left-bottom.svg" alt="" class="svg-lb" />
-        <img src="img/left-mid.svg" alt="" class="svg-lm" />
+        <img
+          src="img/left-top.svg"
+          alt=""
+          class="svg-lt"
+          data-aos="slide-right"
+          data-aos-duration="1000"
+          data-aos-once="true"
+        />
+        <img
+          src="img/left-bottom.svg"
+          alt=""
+          class="svg-lb"
+          data-aos="slide-right"
+          data-aos-duration="2000"
+          data-aos-once="true"
+        />
+        <img
+          src="img/left-mid.svg"
+          alt=""
+          class="svg-lm"
+          data-aos="slide-right"
+          data-aos-duration="1200"
+          data-aos-once="true"
+        />
         <!--right svg -->
-        <img src="img/right-mid.svg" alt="" class="svg-rm" />
-        <img src="img/right-top.svg" alt="" class="svg-rt" />
-        <img src="img/right-bottom.svg" alt="" class="svg-rb" />
+        <img
+          src="img/right-mid.svg"
+          alt=""
+          class="svg-rm"
+          data-aos="slide-left"
+          data-aos-duration="2000"
+          data-aos-once="true"
+        />
+        <img
+          src="img/right-top.svg"
+          alt=""
+          class="svg-rt"
+          data-aos="slide-left"
+          data-aos-duration="1500"
+          data-aos-once="true"
+        />
+        <img
+          src="img/right-bottom.svg"
+          alt=""
+          class="svg-rb"
+          data-aos="slide-left"
+          data-aos-duration="1200"
+          data-aos-once="true"
+        />
         <!--speck svg -->
-        <img src="img/e6.svg" alt="" class="svg-e6" />
-        <img src="img/e7.svg" alt="" class="svg-e7" />
-        <img src="img/e9.svg" alt="" class="svg-e9" />
-        <img src="img/e10.svg" alt="" class="svg-e10" />
+        <img
+          src="img/e6.svg"
+          alt=""
+          class="svg-e6"
+          data-aos="slide-right"
+          data-aos-duration="2000"
+          data-aos-once="true"
+        />
+        <img
+          src="img/e7.svg"
+          alt=""
+          class="svg-e7"
+          data-aos="slide-left"
+          data-aos-duration="2000"
+          data-aos-once="true"
+        />
+        <img
+          src="img/e9.svg"
+          alt=""
+          class="svg-e9"
+          data-aos="slide-right"
+          data-aos-duration="2000"
+          data-aos-once="true"
+        />
+        <img
+          src="img/e10.svg"
+          alt=""
+          class="svg-e10"
+          data-aos="slide-left"
+          data-aos-duration="2000"
+          data-aos-once="true"
+        />
       </div>
       <!-- SVG ENDS -->
       <!-- WORK -->
@@ -107,14 +179,10 @@
                 <img
                   src="img/template.png"
                   alt="desc"
-                  data-aos="slide-up"
+                  data-aos="slide-right"
                   data-aos-duration="1500"
                 />
-                <div
-                  class="work-text"
-                  data-aos="fade-left"
-                  data-aos-duration="1500"
-                >
+                <div class="work-text">
                   <h3>Project title</h3>
                   <span>HTML</span>
                   <span>CSS</span>
@@ -132,14 +200,10 @@
                 <img
                   src="img/template.png"
                   alt="desc"
-                  data-aos="slide-up"
+                  data-aos="slide-left"
                   data-aos-duration="1500"
                 />
-                <div
-                  class="work-text"
-                  data-aos="fade-right"
-                  data-aos-duration="1500"
-                >
+                <div class="work-text">
                   <h3>Project title</h3>
                   <span>HTML</span>
                   <span>CSS</span>
@@ -157,14 +221,10 @@
                 <img
                   src="img/template.png"
                   alt="desc"
-                  data-aos="slide-up"
+                  data-aos="slide-right"
                   data-aos-duration="1500"
                 />
-                <div
-                  class="work-text"
-                  data-aos="fade-left"
-                  data-aos-duration="1500"
-                >
+                <div class="work-text">
                   <h3>Project title</h3>
                   <span>HTML</span>
                   <span>CSS</span>
@@ -274,17 +334,17 @@
           <!-- SOCIAL -->
           <div class="social">
             <div class="social-icons">
-              <p>
+              <p data-aos="fade-right" data-aos-duration="1200">
                 <a href="https://www.facebook.com/" target="_blank">
                   <i class="fab fa-facebook-f"></i>
                 </a>
               </p>
-              <p>
+              <p data-aos="fade-in" data-aos-duration="1200">
                 <a href="https://www.twitter.com/" target="_blank">
                   <i class="fab fa-twitter"></i>
                 </a>
               </p>
-              <p>
+              <p data-aos="fade-left" data-aos-duration="1200">
                 <a href="https://www.instagram.com/" target="_blank">
                   <i class="fab fa-instagram"></i>
                 </a>
@@ -309,6 +369,7 @@
       class="svg-waves"
       data-aos="slide-up"
       data-aos-duration="1500"
+      data-aos-once="true"
     />
 
     <!-- SCRIPTS -->
