Initialize image slides jquery code on work detail page

--- a/work/jubilee-austen.html
+++ b/work/jubilee-austen.html
@@ -74,8 +74,14 @@
       <section class="work-detail">
         <div class="content-wrapper">
           <h1>Jubilee Austen</h1>
-          <div class="image-container">
-            <img src="../img/template.png" alt="Work image" />
+          <div class="image-slides-outer">
+            <div class="image-slides-inner">
+              <img src="../img/template.png" class="active" />
+              <img src="../img/2.png" />
+              <img src="../img/rect.png" />
+            </div>
+            <a href="#" class="prev"><</a>
+            <a href="#" class="next">></a>
           </div>
           <div
             class="work-detail-text"
