Add image slides on work detail page

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           alt=""
           class="svg-lb"
           data-aos="slide-right"
-          data-aos-duration="2000"
+          data-aos-duration="600"
           data-aos-once="true"
         />
         <img
@@ -106,7 +106,7 @@
           alt=""
           class="svg-lm"
           data-aos="slide-right"
-          data-aos-duration="1200"
+          data-aos-duration="800"
           data-aos-once="true"
         />
         <!--right svg -->
@@ -115,7 +115,7 @@
           alt=""
           class="svg-rm"
           data-aos="slide-left"
-          data-aos-duration="2000"
+          data-aos-duration="1000"
           data-aos-once="true"
         />
         <img
@@ -123,7 +123,7 @@
           alt=""
           class="svg-rt"
           data-aos="slide-left"
-          data-aos-duration="1500"
+          data-aos-duration="500"
           data-aos-once="true"
         />
         <img
@@ -131,7 +131,7 @@
           alt=""
           class="svg-rb"
           data-aos="slide-left"
-          data-aos-duration="1200"
+          data-aos-duration="800"
           data-aos-once="true"
         />
         <!--speck svg -->
@@ -140,31 +140,17 @@
           alt=""
           class="svg-e6"
           data-aos="slide-right"
-          data-aos-duration="2000"
+          data-aos-duration="500"
           data-aos-once="true"
         />
-        <img
-          src="img/e7.svg"
-          alt=""
-          class="svg-e7"
-          data-aos="slide-left"
-          data-aos-duration="2000"
-          data-aos-once="true"
-        />
-        <img
-          src="img/e9.svg"
-          alt=""
-          class="svg-e9"
-          data-aos="slide-right"
-          data-aos-duration="2000"
-          data-aos-once="true"
-        />
+        <img src="img/e7.svg" alt="" class="svg-e7" />
+        <img src="img/e9.svg" alt="" class="svg-e9" />
         <img
           src="img/e10.svg"
           alt=""
           class="svg-e10"
           data-aos="slide-left"
-          data-aos-duration="2000"
+          data-aos-duration="500"
           data-aos-once="true"
         />
       </div>
@@ -296,12 +282,7 @@
       </section>
 
       <!-- CALL TO ACTION-->
-      <section
-        class="call-to-action"
-        data-aos="slide-up"
-        data-aos-duration="1500"
-        data-aos-delay="300"
-      >
+      <section class="call-to-action">
         <div class="rounded-square-container">
           <div class="content-wrapper">
             <h1>Call to action</h1>
@@ -374,6 +355,10 @@
 
     <!-- SCRIPTS -->
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
@@ -386,10 +371,6 @@
         );
     </script>
     <script src="js/main.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
     <script src="js/plugins.js"></script>
   </body>
 </html>
