--- a/work/jubilee-austen.html
+++ b/work/jubilee-austen.html
@@ -74,7 +74,12 @@
       <section class="work-detail">
         <div class="content-wrapper">
           <h1>Jubilee Austen</h1>
-          <div class="image-slides-outer">
+          <div
+            class="image-slides-outer"
+            data-aos="zoom-in"
+            data-aos-duration="1200"
+            data-aos-once="true"
+          >
             <div class="image-slides-inner">
               <img src="../img/template.png" class="active" />
               <img src="../img/2.png" />
@@ -87,6 +92,8 @@
             class="work-detail-text"
             data-aos="zoom-in"
             data-aos-duration="1200"
+            data-aos-once="true"
+            data-aos-anchor="top-top"
           >
             <div class="work-detail-sub">
               <h3>Description</h3>
