Remove animation on svg blobs to prevent mousemove interruption

--- a/index.html
+++ b/index.html
@@ -73,10 +73,8 @@
       <!-- HERO -->
       <section class="hero">
         <div class="content-wrapper">
-          <h1 data-aos="zoom-in" data-aos-duration="1500">Hanis</h1>
-          <h2 data-aos="zoom-in" data-aos-duration="1500">
-            Creating beautiful websites
-          </h2>
+          <h1>Hanis</h1>
+          <h2>Creating beautiful websites</h2>
           <div class="button-container">
             <a href="#work" class="button">View work</a>
           </div>
@@ -85,74 +83,18 @@
       <!-- SVG START -->
       <div class="parallaxfx">
         <!-- left svg -->
-        <img
-          src="img/left-top.svg"
-          alt=""
-          class="svg-lt"
-          data-aos="slide-right"
-          data-aos-duration="1000"
-          data-aos-once="true"
-        />
-        <img
-          src="img/left-bottom.svg"
-          alt=""
-          class="svg-lb"
-          data-aos="slide-right"
-          data-aos-duration="600"
-          data-aos-once="true"
-        />
-        <img
-          src="img/left-mid.svg"
-          alt=""
-          class="svg-lm"
-          data-aos="slide-right"
-          data-aos-duration="800"
-          data-aos-once="true"
-        />
+        <img src="img/left-top.svg" alt="" class="svg-lt" />
+        <img src="img/left-bottom.svg" alt="" class="svg-lb" />
+        <img src="img/left-mid.svg" alt="" class="svg-lm" />
         <!--right svg -->
-        <img
-          src="img/right-mid.svg"
-          alt=""
-          class="svg-rm"
-          data-aos="slide-left"
-          data-aos-duration="1000"
-          data-aos-once="true"
-        />
-        <img
-          src="img/right-top.svg"
-          alt=""
-          class="svg-rt"
-          data-aos="slide-left"
-          data-aos-duration="500"
-          data-aos-once="true"
-        />
-        <img
-          src="img/right-bottom.svg"
-          alt=""
-          class="svg-rb"
-          data-aos="slide-left"
-          data-aos-duration="800"
-          data-aos-once="true"
-        />
+        <img src="img/right-mid.svg" alt="" class="svg-rm" />
+        <img src="img/right-top.svg" alt="" class="svg-rt" />
+        <img src="img/right-bottom.svg" alt="" class="svg-rb" />
         <!--speck svg -->
-        <img
-          src="img/e6.svg"
-          alt=""
-          class="svg-e6"
-          data-aos="slide-right"
-          data-aos-duration="500"
-          data-aos-once="true"
-        />
+        <img src="img/e6.svg" alt="" class="svg-e6" />
         <img src="img/e7.svg" alt="" class="svg-e7" />
         <img src="img/e9.svg" alt="" class="svg-e9" />
-        <img
-          src="img/e10.svg"
-          alt=""
-          class="svg-e10"
-          data-aos="slide-left"
-          data-aos-duration="500"
-          data-aos-once="true"
-        />
+        <img src="img/e10.svg" alt="" class="svg-e10" />
       </div>
       <!-- SVG ENDS -->
       <!-- WORK -->
@@ -315,17 +257,17 @@
           <!-- SOCIAL -->
           <div class="social">
             <div class="social-icons">
-              <p data-aos="fade-right" data-aos-duration="1200">
+              <p data-aos="fade-right" data-aos-duration="500">
                 <a href="https://www.facebook.com/" target="_blank">
                   <i class="fab fa-facebook-f"></i>
                 </a>
               </p>
-              <p data-aos="fade-in" data-aos-duration="1200">
+              <p data-aos="fade-in" data-aos-duration="500">
                 <a href="https://www.twitter.com/" target="_blank">
                   <i class="fab fa-twitter"></i>
                 </a>
               </p>
-              <p data-aos="fade-left" data-aos-duration="1200">
+              <p data-aos="fade-left" data-aos-duration="500">
                 <a href="https://www.instagram.com/" target="_blank">
                   <i class="fab fa-instagram"></i>
                 </a>
