Fix width issue on iPhone 5s screen and adjust footer arrangement

--- a/index.html
+++ b/index.html
@@ -294,17 +294,22 @@
           <!-- SOCIAL -->
           <div class="social">
             <div class="social-icons">
-              <p data-aos="fade-right" data-aos-duration="500">
+              <p data-aos="slide-up" data-aos-duration="500">
                 <a href="https://www.facebook.com/" target="_blank">
                   <i class="fab fa-facebook-f"></i>
                 </a>
               </p>
-              <p data-aos="fade-in" data-aos-duration="500">
+              <p
+                data-aos="slide-up"
+                data-aos-duration="500"
+                data-aos-delay="510"
+                data-aos-offset="400px"
+              >
                 <a href="https://www.twitter.com/" target="_blank">
                   <i class="fab fa-twitter"></i>
                 </a>
               </p>
-              <p data-aos="fade-left" data-aos-duration="500">
+              <p data-aos="slide-up" data-aos-duration="500">
                 <a href="https://www.instagram.com/" target="_blank">
                   <i class="fab fa-instagram"></i>
                 </a>
@@ -317,20 +322,17 @@
         <!-- footer content div ends -->
       </div>
       <!-- content wrapper div ends -->
-
-      <!-- LASTLY -->
-      <div class="lastly">
-        <p>Made with love by <a href="./">Hanis</a> 2020</p>
-      </div>
     </footer>
-    <img
-      src="img/waves-footer.svg"
-      alt=""
-      class="svg-waves"
+    <!-- LASTLY -->
+    <div
+      class="lastly"
       data-aos="slide-up"
-      data-aos-duration="1500"
+      data-aos-duration="1200"
       data-aos-once="true"
-    />
+    >
+      <p>Made with love by <a href="./">Hanis</a> 2020</p>
+      <img src="img/waves-footer.svg" alt="" />
+    </div>
 
     <!-- SCRIPTS -->
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
