Add text on main page and adjust paddings on hero section for mobile, tablet and desktop styles

--- a/index.html
+++ b/index.html
@@ -73,8 +73,11 @@
       <!-- HERO -->
       <section class="hero">
         <div class="content-wrapper">
-          <h1>Hanis</h1>
-          <h2>Creating beautiful websites</h2>
+          <h1>Hi! I'm Hanis.</h1>
+          <h2>
+            I’m a web designer and developer and I love making fully custom and
+            stunning websites.
+          </h2>
           <div class="button-container">
             <a href="#work" class="button">View work</a>
           </div>
@@ -117,7 +120,7 @@
               data-aos-duration="1500"
               data-aos-delay="2400"
             >
-              Scroll down to view what I can do.
+              Continue scrolling to see what I can do.
             </h2>
           </div>
         </div>
@@ -217,10 +220,12 @@
             <article data-aos="fade-up" data-aos-duration="1000">
               <i class="fas fa-paint-brush"></i>
               <div class="skills-text">
-                <h4>Skill title</h4>
+                <h4>Code</h4>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Optio itaque inventore ipsum dolore eius deserunt aperiam.
+                  Whether building from ground-up or refreshing existing pages,
+                  I can help write code that is lean and clean for you -
+                  optimized for fast loading, mobile-responsiveness and
+                  readability.
                 </p>
               </div>
             </article>
@@ -233,10 +238,11 @@
             >
               <i class="fas fa-code"></i>
               <div class="skills-text">
-                <h4>Skill title</h4>
+                <h4>Design</h4>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Optio itaque inventore ipsum dolore eius deserunt aperiam.
+                  I value stylish and modern designs, with focus on cohesive
+                  blends of typography and content to convey the message that
+                  you want to send.
                 </p>
               </div>
             </article>
@@ -249,10 +255,11 @@
             >
               <i class="fas fa-search"></i>
               <div class="skills-text">
-                <h4>Skill title</h4>
+                <h4>Support</h4>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Optio itaque inventore ipsum dolore eius deserunt aperiam.
+                  You can count on me to take care of the technical needs of
+                  your website, be it updates, troubleshooting and maintenance,
+                  leaving you time to do what you love.
                 </p>
               </div>
             </article>
@@ -264,13 +271,10 @@
       <section class="call-to-action">
         <div class="rounded-square-container">
           <div class="content-wrapper">
-            <h1>Call to action</h1>
+            <h1>Want to work with me?</h1>
             <p>
-              Send me questions at
-              <a href="mailto:hanisno@outlook.com">hanisno@outlook.com</a>,
-              check out
-              <a href="contact/index.html">other ways you can reach me</a> or
-              learn more <a href="about/index.html">about who I am</a>.
+              I love to design and make things. If you have a website or project
+              in mind or you just want to say hey, then get in touch.
             </p>
           </div>
         </div>
