Add button to final cta section and adjust font size

--- a/index.html
+++ b/index.html
@@ -276,6 +276,9 @@
               I love to design and make things. If you have a website or project
               in mind or you just want to say hey, then get in touch.
             </p>
+            <div class="button-container">
+              <a href="mailto:hanisno@outlook.com" class="button">Send email</a>
+            </div>
           </div>
         </div>
       </section>
