Tweak btn hover color and add text to work descriptions

--- a/index.html
+++ b/index.html
@@ -143,14 +143,13 @@
                   data-aos="fade-in"
                   data-aos-duration="1500"
                 >
-                  <h3>Project title</h3>
+                  <h3>Nexus Voyage</h3>
                   <span>HTML</span>
                   <span>CSS</span>
                   <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Voluptatem laborum iusto totam consectetur molestias
-                    aspernatur id possimus nesciunt facilis, rerum dignissimos
-                    sint officiis deserunt magnam. Facilis totam quo eum dolor!
+                    Nexus Voyage is a fictional space travel website that is
+                    coded with HTML and CSS. It is fully responsive across
+                    mobile, tablet and desktop devices.
                   </p>
                 </div>
               </article>
@@ -168,14 +167,13 @@
                   data-aos="fade-in"
                   data-aos-duration="1500"
                 >
-                  <h3>Project title</h3>
+                  <h3>Rogue Pickings</h3>
                   <span>HTML</span>
                   <span>CSS</span>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Facere illo in quod, consequatur unde sit? Sint deserunt
-                    exercitationem quaerat inventore, architecto in, fugiat,
-                    autem perferendis sapiente iure nulla vero veritatis.
+                    Rogue Pickings is a website for an imaginary food truck
+                    company. It features a responsive one-page website coded
+                    using HTML and CSS.
                   </p>
                 </div>
               </article>
@@ -193,14 +191,12 @@
                   data-aos="fade-in"
                   data-aos-duration="1500"
                 >
-                  <h3>Project title</h3>
+                  <h3>Jubilee Austen</h3>
                   <span>HTML</span>
                   <span>CSS</span>
                   <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Provident commodi consectetur quam aperiam vero sit impedit
-                    quia? Ea corrupti, dolores aut dicta nihil dolorem
-                    explicabo, odit officiis praesentium omnis voluptate.
+                    Jubilee Austen is a portfolio for a fictional web developer.
+                    HTML and CSS was used to create a static website.
                   </p>
                 </div>
               </article>
