Add work thumbnail images and hero bg image

--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
         <div class="wrapper-container">
           <h1>Work</h1>
           <div class="content-wrapper">
-            <a href="work/jubilee-austen.html">
+            <a href="work/nexus-voyage-detail.html">
               <article>
                 <img
-                  src="img/template.png"
+                  src="img/nexus-voyage-preview.png"
                   alt="desc"
                   data-aos="slide-right"
                   data-aos-duration="1500"
@@ -154,10 +154,10 @@
                 </div>
               </article>
             </a>
-            <a href="work/jubilee-austen.html">
+            <a href="work/rogue-pickings-detail.html">
               <article id="article-b" data-aos-delay="300">
                 <img
-                  src="img/template.png"
+                  src="img/rogue-pickings-preview.png"
                   alt="desc"
                   data-aos="slide-left"
                   data-aos-duration="1500"
@@ -178,10 +178,10 @@
                 </div>
               </article>
             </a>
-            <a href="work/jubilee-austen.html">
+            <a href="work/jubilee-austen-preview.html">
               <article data-aos-delay="500">
                 <img
-                  src="img/template.png"
+                  src="img/jubilee-austen-preview.png"
                   alt="desc"
                   data-aos="slide-right"
                   data-aos-duration="1500"
