Update Nexus work detail img, prev next buttons and add completed date

--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
         <div class="wrapper-container">
           <h1>Work</h1>
           <div class="content-wrapper">
-            <a href="work/nexus-voyage-detail.html">
+            <a href="work/nexus-detail.html">
               <article>
                 <img
-                  src="img/nexus-voyage-preview.png"
+                  src="img/nexus-preview.png"
                   alt="desc"
                   data-aos="fade-right"
                   data-aos-duration="1500"
@@ -153,13 +153,13 @@
                   data-aos="fade-in"
                   data-aos-duration="1500"
                 >
-                  <h3>Nexus Voyage</h3>
+                  <h3>Nexus</h3>
                   <span>HTML</span>
                   <span>CSS</span>
                   <p>
-                    Nexus Voyage is a fictional space travel website that is
-                    coded with HTML and CSS. It is fully responsive across
-                    mobile, tablet and desktop devices.
+                    Nexus is a fictional space travel website that is coded with
+                    HTML and CSS. It is fully responsive across mobile, tablet
+                    and desktop devices.
                   </p>
                 </div>
               </article>
@@ -345,7 +345,7 @@
       data-aos-duration="1200"
       data-aos-once="true"
     >
-      <p>Made with love by <a href="./">Hanis</a> 2020</p>
+      <p><a href="./">Hanis</a> 2020</p>
       <img src="img/waves-footer.svg" alt="" />
     </div>
 
