--- a/work/jubilee-austen.html
+++ b/work/jubilee-austen.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Jubilee Austen - Work Detail</title>
+    <title>Nexus - Work Detail</title>
     <meta
       name="description"
       content="Portfolio of Hanis Noor, a front-end web designer and developer"
@@ -73,7 +73,7 @@
     <main>
       <section class="work-detail">
         <div class="content-wrapper">
-          <h1>Jubilee Austen</h1>
+          <h1>Nexus</h1>
           <div
             class="image-slides-outer"
             data-aos="zoom-in"
@@ -81,12 +81,14 @@
             data-aos-once="true"
           >
             <div class="image-slides-inner">
-              <img src="../img/template.png" class="active" />
-              <img src="../img/2.png" />
-              <img src="../img/rect.png" />
+              <img src="../img/nexus-pc.png" class="active" />
+              <img src="../img/nexus-tablet.png" />
+              <img src="../img/nexus-ipx.png" />
             </div>
-            <a href="#" class="prev"><</a>
-            <a href="#" class="next">></a>
+            <div class="image-slides-buttons">
+              <a href="#" class="prev"><i class="fas fa-angle-left"></i></a>
+              <a href="#" class="next"><i class="fas fa-angle-right"></i></a>
+            </div>
           </div>
           <div
             class="work-detail-text"
@@ -102,6 +104,10 @@
                 quasi dicta, illum cum praesentium, quia laboriosam repudiandae
                 necessitatibus perspiciatis.
               </p>
+            </div>
+            <div class="work-detail-sub">
+              <h3>Completed</h3>
+              <p>May 2020</p>
             </div>
             <div class="work-detail-sub">
               <h3>Tech</h3>
@@ -120,8 +126,12 @@
             </div>
           </div>
           <div class="pagination">
-            <a href="#" class="button"><</a>
-            <a href="#" class="button">></a>
+            <a href="#" class="button"
+              ><i class="fas fa-chevron-left"></i> Prev</a
+            >
+            <a href="#" class="button"
+              >Next <i class="fas fa-chevron-right"></i
+            ></a>
           </div>
         </div>
       </section>
@@ -129,7 +139,7 @@
 
     <!-- FOOTER -->
     <footer>
-      <div class="content-wrapper">
+      <div class="wrapper-container">
         <div class="footer-content">
           <!-- NAVIGATION -->
           <nav class="footer-navigation">
@@ -144,17 +154,21 @@
           <!-- SOCIAL -->
           <div class="social">
             <div class="social-icons">
-              <p data-aos="fade-right" data-aos-duration="1000">
+              <p data-aos="slide-up" data-aos-duration="500">
                 <a href="https://www.facebook.com/" target="_blank">
                   <i class="fab fa-facebook-f"></i>
                 </a>
               </p>
-              <p data-aos="fade-in" data-aos-duration="1000">
+              <p
+                data-aos="slide-up"
+                data-aos-duration="500"
+                data-aos-delay="510"
+              >
                 <a href="https://www.twitter.com/" target="_blank">
                   <i class="fab fa-twitter"></i>
                 </a>
               </p>
-              <p data-aos="fade-left" data-aos-duration="1000">
+              <p data-aos="slide-up" data-aos-duration="500">
                 <a href="https://www.instagram.com/" target="_blank">
                   <i class="fab fa-instagram"></i>
                 </a>
@@ -167,20 +181,18 @@
         <!-- footer content div ends -->
       </div>
       <!-- content wrapper div ends -->
-
-      <!-- LASTLY -->
-      <div class="lastly">
-        <p>Made with love by <a href="./">Hanis</a> 2020</p>
-      </div>
     </footer>
-    <img
-      src="../img/waves-footer.svg"
-      alt=""
-      class="svg-waves"
+
+    <!-- LASTLY -->
+    <div
+      class="lastly"
       data-aos="slide-up"
-      data-aos-duration="1000"
+      data-aos-duration="1200"
       data-aos-once="true"
-    />
+    >
+      <p><a href="./">Hanis</a> 2020</p>
+      <img src="../img/waves-footer.svg" alt="" />
+    </div>
 
     <!-- SCRIPTS -->
     <script src="../js/vendor/modernizr-3.8.0.min.js"></script>
