--- a/work/index.html
+++ b/work/index.html
@@ -75,69 +75,80 @@
         <div class="wrapper-container">
           <h1>Work</h1>
           <div class="content-wrapper">
-            <a href="work/jubilee-austen.html">
+            <a href="nexus-detail.html">
               <article>
                 <img
-                  src="../img/template.png"
+                  src="../img/nexus-preview.png"
                   alt="desc"
-                  data-aos="slide-right"
+                  data-aos="fade-right"
                   data-aos-duration="1500"
                 />
-                <div class="work-text">
-                  <h3>Project title</h3>
+                <div
+                  class="work-text"
+                  data-aos="fade-in"
+                  data-aos-duration="1500"
+                >
+                  <h3>Nexus</h3>
                   <span>HTML</span>
                   <span>CSS</span>
                   <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Voluptatem laborum iusto totam consectetur molestias
-                    aspernatur id possimus nesciunt facilis, rerum dignissimos
-                    sint officiis deserunt magnam. Facilis totam quo eum dolor!
+                    Nexus is a fictional space travel website that is coded with
+                    HTML and CSS. It is fully responsive across mobile, tablet
+                    and desktop devices.
                   </p>
                 </div>
               </article>
             </a>
-            <a href="work/jubilee-austen.html">
-              <article id="article-b">
+            <a href="rogue-pickings-detail.html">
+              <article id="article-b" data-aos-delay="300">
                 <img
-                  src="../img/template.png"
+                  src="../img/rogue-pickings-preview.png"
                   alt="desc"
-                  data-aos="slide-left"
+                  data-aos="fade-left"
                   data-aos-duration="1500"
                 />
-                <div class="work-text">
-                  <h3>Project title</h3>
+                <div
+                  class="work-text"
+                  data-aos="fade-in"
+                  data-aos-duration="1500"
+                >
+                  <h3>Rogue Pickings</h3>
                   <span>HTML</span>
                   <span>CSS</span>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Facere illo in quod, consequatur unde sit? Sint deserunt
-                    exercitationem quaerat inventore, architecto in, fugiat,
-                    autem perferendis sapiente iure nulla vero veritatis.
+                    Rogue Pickings is a website for an imaginary food truck
+                    company. It features a responsive one-page website coded
+                    using HTML and CSS.
                   </p>
                 </div>
               </article>
             </a>
-            <a href="work/jubilee-austen.html">
-              <article>
+            <a href="jubilee-austen-preview.html">
+              <article data-aos-delay="500">
                 <img
-                  src="../img/template.png"
+                  src="../img/jubilee-austen-preview.png"
                   alt="desc"
-                  data-aos="slide-right"
+                  data-aos="fade-right"
                   data-aos-duration="1500"
                 />
-                <div class="work-text">
-                  <h3>Project title</h3>
+                <div
+                  class="work-text"
+                  data-aos="fade-in"
+                  data-aos-duration="1500"
+                >
+                  <h3>Jubilee Austen</h3>
                   <span>HTML</span>
                   <span>CSS</span>
                   <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Provident commodi consectetur quam aperiam vero sit impedit
-                    quia? Ea corrupti, dolores aut dicta nihil dolorem
-                    explicabo, odit officiis praesentium omnis voluptate.
+                    Jubilee Austen is a portfolio for a fictional web developer.
+                    HTML and CSS was used to create a static website.
                   </p>
                 </div>
               </article>
             </a>
+            <div class="button-container">
+              <a href="#work" class="button">View more</a>
+            </div>
           </div>
         </div>
       </section>
